Replace uber-jar with Jib layered Docker build
Signed-off-by: Marvin Froeder <marvin@datasqrl.com>